
\name{NEWS}
\title{R-INLA News}
\encoding{UTF-8}



\section{CHANGES IN VERSION xx.xx.xx}{
  \subsection{USER-VISIBLE CHANGES}{
    \itemize{
      \item 
    }
  }
  \subsection{NEW FEATURES}{
    \itemize{
      \item
    }
  }
  \subsection{NEW EXPERIMENTAL FEATURES}{
    \itemize{
      \item
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item
    }
  }
}

\section{CHANGES IN VERSION xx.xx.xx}{
  \subsection{USER-VISIBLE CHANGES}{
    \itemize{
      \item \code{MCMC} mode is now disabled
    }
  }
  \subsection{NEW FEATURES}{
    \itemize{
      \item
    }
  }
  \subsection{NEW EXPERIMENTAL FEATURES}{
    \itemize{
      \item Added family \code{xbinomial} that allow non-integer
      response.
      \item Likelihood model \code{bgev} add (not yet complete), and was
      renamed from the experimental likelihood model \code{gev2}.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item If \code{inla.call="remote"} is set,
      then \code{INLA:::inla.call.builtin()} is used
      if \code{inla.qinv()} and/or \code{inla.qsolve()} are
      used while constructing the model.
    }
  }
}

\section{CHANGES IN VERSION 20.03.17}{
  \subsection{BUG FIXES}{
    \itemize{
      \item Updated file \code{jointdataCD4.rds} in \code{exampledata/}
    }
  }
}


\section{CHANGES IN VERSION 20.03.09}{
  \subsection{BUG FIXES}{
    \itemize{
      \item Fixed a bug in the PIT calculations for the zeroinflated,
      type 0, of poisson, binomial and nbinomial.
    }
  }
}

\section{CHANGES IN VERSION 20.03.08}{
  \subsection{NEW EXPERIMENTAL FEATURES}{
    \itemize{
      \item Added option \code{b.strategy} in \code{control.inla} to
      control what to do with the linear term when the \code{cmin} option is
      in effect
      \item Added in-interval observed event in \code{inla.surv}
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item Added \code{dplyr} as suggested package as
      \code{dplyr::bind_rows} can replace